--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -41,7 +41,7 @@
                    <div class="collapse" id="sidebarProducts">
                         <ul class="nav sub-navbar-nav">
                              <li class="sub-nav-item">
-                                  <a class="sub-nav-link" href="product-list.html">List</a>
+                                  <a class="sub-nav-link" href="/product-list">List</a>
                              </li>
                              <li class="sub-nav-item">
                                   <a class="sub-nav-link" href="product-grid.html">Grid</a>
@@ -50,7 +50,7 @@
                                   <a class="sub-nav-link" href="product-details.html">Details</a>
                              </li>
                              <li class="sub-nav-item">
-                                  <a class="sub-nav-link" href="product-edit.html">Edit</a>
+                                  <a class="sub-nav-link" href="/product-edit">Edit</a>
                              </li>
                              <li class="sub-nav-item">
                                   <a class="sub-nav-link" href="/product-add">Create</a>
